Move built-in class loaders to jdk.internal.loader